  * Added versions of the spectra plotters, the correlations, and the stand plotters that use MCS meta-data bundles
  * Added a basic SSMIF file for the north arm site (LWA-2)
  * Added a preliminary module for incoherent dedispersion lsl.misc.dedispersion
  * Added support for spectral kurtosis via lsl.statistics.kurtosis
  * Updated the dependency list

0.4.5
  * Tweaked how the averaging in drxSpectra and tbnSpectra is performed
  * Upgraded the lsl.reader.drsu module to work with larger file count LWAFS
  * Added a ls-style script, lsDRSU.py, to list the contents of a DRSU
  * Added a glob-style function to the DRSU module
  * Added an array-geometry correction to the correlator to phase up on zenith
  * Updated the dependency list
  * Added ARX channel mapping information to lsl.common.stations.Antenna instances
  * Added a new versioning system to make it easier to access the LSL version in python
  * Fixed a mapping problem in plotStands.py that mapped by digitizer, not stand
  * Added a gatherDebugging.py script alongside setup.py to help with debugging and installation problems
  * Moved gatherDebugging.py to the script directory to have it installed with LSL

0.4.4.1
  * Fixed the missing cable attenuation parameters in the SSMIF

0.4.4
  * Added an id number attribute to lsl.common.stations.FEE objects
  * Updated LWA-1 SSMIF to 2011-08-10 version
  * Added `keep` option to tbnSpectra.py to only display a certain collection of stands
  * Possibly cleared up a install problem on some systems that prevents testing
  * Fixed various memory leaks in the readers and the direct DRSU access module
  * Added `documentation support` for accessing the central frequency of a TBN frame
  * Added support for variable noise level in the various lsl.sim.dp functions
  * Worked on improving ATLAS library detection on Redhat-based distributions
  * Improved detection of potential build problems with the DRSU direct-access extension